Reddit Server Issue fixed

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 TWITTER_API_KEY=AAAAAAAAAAAAAAAAAAAAANRILgAAAAAAnNwIzUejRCOuH5E6I8xnZz4puTs%3D1Zv7ttfk8LF81IUq16cHjhLTvJu4FA33AGWWjCpTnA
 GOOGLE_API_KEY=cd8752e75e93405daa53498ced396941
 PORT=8000
+REDDIT_CLIENT_ID=T3GBbFdKWTExBe7erf9SSA
+REDDIT_CLIENT_SECRET=7cFniZaLhWRJyOVWi_5WgR1l1zOq1Q
+REDDIT_USERNAME=WorkingEntertainer45
+REDDIT_PASSWORD=caton1234
